# HexCalculator

./: CMakeLists.txt  README.md  calculatorcore.cpp  calculatorcore.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build.yml
